--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="uriel tekoäly chat website"
+      data-rh="true"
     />
+    <title>Uriel Tekoäly Chat</title>
+    <meta name="keywords" content="tekoäly, suomi, ai, uriel" data-rh="true"/>
+    <meta name="robots" content="index, follow" data-rh="true"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
